@@ -6,6 +6,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Controller
@@ -14,7 +15,7 @@ public class WebController {
     @GetMapping("/")
     public String index(Model model){
         model.addAttribute("user", new Programmer(1L, "Ivan",
-                List.of(
+                Arrays.asList(
                         new Language(1L, "Java", "cool language", null),
                         new Language(1L, "Python", "also cool language", null)
                 ), null));
@@ -32,5 +33,8 @@ public class WebController {
         return "language";
     }
 
-
+    @GetMapping("/vacancies")
+    public String vacancies(){
+        return "vacancies";
+    }
 }
